--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-     <h3><span id="result"></span></h3>
+     <h3>SCORE: <span id="result"></span></h3>
 
      <div id="grid"></div>
-     
+
      <script src="app.js"></script>
 </body>
 </html>
